apps/hono/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hono
  namespace: hono
  labels:
    app: hono
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hono
  template:
    metadata:
      labels:
        app: hono
    spec:
      containers:
        - name: hono
          image: registry.licht.moe/hono-shinobu:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 10
            tcpSocket:
              port: http
          readinessProbe:
            initialDelaySeconds: 10
            tcpSocket:
              port: http
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
