apps/hono/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hono
  namespace: hono
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hono.gatzweiler.xyz`)
      services:
        - name: hono
          port: 8000
  tls:
    secretName: hono-tls
